# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("fusl") {
  configs = []

  cflags = [
    # Flags from musl
    "-std=c99",
    "-ffreestanding",
    "-nostdinc",

    "-D_XOPEN_SOURCE=700",

    "-Wa,--noexecstack",

    "-fomit-frame-pointer",
    "-fno-unwind-tables",
    "-fno-asynchronous-unwind-tables",
    "-ffunction-sections",
    "-fdata-sections",
    "-Werror=implicit-function-declaration",
    "-Werror=implicit-int",
    "-Werror=pointer-sign",
    "-Werror=pointer-arith",

    # Flags we add to get build working
    "-Wno-bitwise-op-parentheses",
    "-Wno-logical-op-parentheses",
    "-Wno-shift-op-parentheses",
  ]

  # Arch specific includes.
  include_dirs = [ "arch/x86_64" ]

  # General includes.
  include_dirs += [
    "src/internal",
    "include",
  ]

  # General sources.
  sources = [
    "//fusl/src/aio/aio.c",
    "//fusl/src/aio/aio_suspend.c",
    "//fusl/src/aio/lio_listio.c",
    "//fusl/src/complex/__cexp.c",
    "//fusl/src/complex/__cexpf.c",
    "//fusl/src/complex/cabs.c",
    "//fusl/src/complex/cabsf.c",
    "//fusl/src/complex/cabsl.c",
    "//fusl/src/complex/cacos.c",
    "//fusl/src/complex/cacosf.c",
    "//fusl/src/complex/cacosh.c",
    "//fusl/src/complex/cacoshf.c",
    "//fusl/src/complex/cacoshl.c",
    "//fusl/src/complex/cacosl.c",
    "//fusl/src/complex/carg.c",
    "//fusl/src/complex/cargf.c",
    "//fusl/src/complex/cargl.c",
    "//fusl/src/complex/casin.c",
    "//fusl/src/complex/casinf.c",
    "//fusl/src/complex/casinh.c",
    "//fusl/src/complex/casinhf.c",
    "//fusl/src/complex/casinhl.c",
    "//fusl/src/complex/casinl.c",
    "//fusl/src/complex/catan.c",
    "//fusl/src/complex/catanf.c",
    "//fusl/src/complex/catanh.c",
    "//fusl/src/complex/catanhf.c",
    "//fusl/src/complex/catanhl.c",
    "//fusl/src/complex/catanl.c",
    "//fusl/src/complex/ccos.c",
    "//fusl/src/complex/ccosf.c",
    "//fusl/src/complex/ccosh.c",
    "//fusl/src/complex/ccoshf.c",
    "//fusl/src/complex/ccoshl.c",
    "//fusl/src/complex/ccosl.c",
    "//fusl/src/complex/cexp.c",
    "//fusl/src/complex/cexpf.c",
    "//fusl/src/complex/cexpl.c",
    "//fusl/src/complex/cimag.c",
    "//fusl/src/complex/cimagf.c",
    "//fusl/src/complex/cimagl.c",
    "//fusl/src/complex/clog.c",
    "//fusl/src/complex/clogf.c",
    "//fusl/src/complex/clogl.c",
    "//fusl/src/complex/conj.c",
    "//fusl/src/complex/conjf.c",
    "//fusl/src/complex/conjl.c",
    "//fusl/src/complex/cpow.c",
    "//fusl/src/complex/cpowf.c",
    "//fusl/src/complex/cpowl.c",
    "//fusl/src/complex/cproj.c",
    "//fusl/src/complex/cprojf.c",
    "//fusl/src/complex/cprojl.c",
    "//fusl/src/complex/creal.c",
    "//fusl/src/complex/crealf.c",
    "//fusl/src/complex/creall.c",
    "//fusl/src/complex/csin.c",
    "//fusl/src/complex/csinf.c",
    "//fusl/src/complex/csinh.c",
    "//fusl/src/complex/csinhf.c",
    "//fusl/src/complex/csinhl.c",
    "//fusl/src/complex/csinl.c",
    "//fusl/src/complex/csqrt.c",
    "//fusl/src/complex/csqrtf.c",
    "//fusl/src/complex/csqrtl.c",
    "//fusl/src/complex/ctan.c",
    "//fusl/src/complex/ctanf.c",
    "//fusl/src/complex/ctanh.c",
    "//fusl/src/complex/ctanhf.c",
    "//fusl/src/complex/ctanhl.c",
    "//fusl/src/complex/ctanl.c",
    "//fusl/src/conf/confstr.c",
    "//fusl/src/conf/fpathconf.c",
    "//fusl/src/conf/legacy.c",
    "//fusl/src/conf/pathconf.c",
    "//fusl/src/conf/sysconf.c",
    "//fusl/src/crypt/crypt.c",
    "//fusl/src/crypt/crypt_blowfish.c",
    "//fusl/src/crypt/crypt_des.c",
    "//fusl/src/crypt/crypt_md5.c",
    "//fusl/src/crypt/crypt_r.c",
    "//fusl/src/crypt/crypt_sha256.c",
    "//fusl/src/crypt/crypt_sha512.c",
    "//fusl/src/crypt/encrypt.c",
    "//fusl/src/ctype/__ctype_b_loc.c",
    "//fusl/src/ctype/__ctype_get_mb_cur_max.c",
    "//fusl/src/ctype/__ctype_tolower_loc.c",
    "//fusl/src/ctype/__ctype_toupper_loc.c",
    "//fusl/src/ctype/isalnum.c",
    "//fusl/src/ctype/isalpha.c",
    "//fusl/src/ctype/isascii.c",
    "//fusl/src/ctype/isblank.c",
    "//fusl/src/ctype/iscntrl.c",
    "//fusl/src/ctype/isdigit.c",
    "//fusl/src/ctype/isgraph.c",
    "//fusl/src/ctype/islower.c",
    "//fusl/src/ctype/isprint.c",
    "//fusl/src/ctype/ispunct.c",
    "//fusl/src/ctype/isspace.c",
    "//fusl/src/ctype/isupper.c",
    "//fusl/src/ctype/iswalnum.c",
    "//fusl/src/ctype/iswalpha.c",
    "//fusl/src/ctype/iswblank.c",
    "//fusl/src/ctype/iswcntrl.c",
    "//fusl/src/ctype/iswctype.c",
    "//fusl/src/ctype/iswdigit.c",
    "//fusl/src/ctype/iswgraph.c",
    "//fusl/src/ctype/iswlower.c",
    "//fusl/src/ctype/iswprint.c",
    "//fusl/src/ctype/iswpunct.c",
    "//fusl/src/ctype/iswspace.c",
    "//fusl/src/ctype/iswupper.c",
    "//fusl/src/ctype/iswxdigit.c",
    "//fusl/src/ctype/isxdigit.c",
    "//fusl/src/ctype/toascii.c",
    "//fusl/src/ctype/tolower.c",
    "//fusl/src/ctype/toupper.c",
    "//fusl/src/ctype/towctrans.c",
    "//fusl/src/ctype/wcswidth.c",
    "//fusl/src/ctype/wctrans.c",
    "//fusl/src/ctype/wcwidth.c",
    "//fusl/src/dirent/__getdents.c",
    "//fusl/src/dirent/alphasort.c",
    "//fusl/src/dirent/closedir.c",
    "//fusl/src/dirent/dirfd.c",
    "//fusl/src/dirent/fdopendir.c",
    "//fusl/src/dirent/opendir.c",
    "//fusl/src/dirent/readdir.c",
    "//fusl/src/dirent/readdir_r.c",
    "//fusl/src/dirent/rewinddir.c",
    "//fusl/src/dirent/scandir.c",
    "//fusl/src/dirent/seekdir.c",
    "//fusl/src/dirent/telldir.c",
    "//fusl/src/dirent/versionsort.c",
    "//fusl/src/env/__environ.c",
    "//fusl/src/env/__init_tls.c",
    "//fusl/src/env/__libc_start_main.c",
    "//fusl/src/env/__reset_tls.c",
    "//fusl/src/env/__stack_chk_fail.c",
    "//fusl/src/env/clearenv.c",
    "//fusl/src/env/getenv.c",
    "//fusl/src/env/putenv.c",
    "//fusl/src/env/setenv.c",
    "//fusl/src/env/unsetenv.c",
    "//fusl/src/errno/__errno_location.c",
    "//fusl/src/errno/strerror.c",
    "//fusl/src/exit/_Exit.c",
    "//fusl/src/exit/abort.c",
    "//fusl/src/exit/assert.c",
    "//fusl/src/exit/at_quick_exit.c",
    "//fusl/src/exit/atexit.c",
    "//fusl/src/exit/exit.c",
    "//fusl/src/exit/quick_exit.c",
    "//fusl/src/fcntl/creat.c",
    "//fusl/src/fcntl/fcntl.c",
    "//fusl/src/fcntl/open.c",
    "//fusl/src/fcntl/openat.c",
    "//fusl/src/fcntl/posix_fadvise.c",
    "//fusl/src/fcntl/posix_fallocate.c",
    "//fusl/src/fenv/__flt_rounds.c",
    "//fusl/src/fenv/fegetexceptflag.c",
    "//fusl/src/fenv/feholdexcept.c",
    "//fusl/src/fenv/fenv.c",
    "//fusl/src/fenv/fesetexceptflag.c",
    "//fusl/src/fenv/fesetround.c",
    "//fusl/src/fenv/feupdateenv.c",
    "//fusl/src/internal/floatscan.c",
    "//fusl/src/internal/intscan.c",
    "//fusl/src/internal/libc.c",
    "//fusl/src/internal/procfdname.c",
    "//fusl/src/internal/shgetc.c",
    "//fusl/src/internal/syscall.c",
    "//fusl/src/internal/syscall_ret.c",
    "//fusl/src/internal/vdso.c",
    "//fusl/src/internal/version.c",
    "//fusl/src/ipc/ftok.c",
    "//fusl/src/ipc/msgctl.c",
    "//fusl/src/ipc/msgget.c",
    "//fusl/src/ipc/msgrcv.c",
    "//fusl/src/ipc/msgsnd.c",
    "//fusl/src/ipc/semctl.c",
    "//fusl/src/ipc/semget.c",
    "//fusl/src/ipc/semop.c",
    "//fusl/src/ipc/semtimedop.c",
    "//fusl/src/ipc/shmat.c",
    "//fusl/src/ipc/shmctl.c",
    "//fusl/src/ipc/shmdt.c",
    "//fusl/src/ipc/shmget.c",
    "//fusl/src/ldso/dl_iterate_phdr.c",
    "//fusl/src/ldso/dladdr.c",
    "//fusl/src/ldso/dlinfo.c",
    "//fusl/src/ldso/dlstart.c",
    "//fusl/src/ldso/dlsym.c",
    "//fusl/src/ldso/dynlink.c",
    "//fusl/src/ldso/tlsdesc.c",
    "//fusl/src/legacy/cuserid.c",
    "//fusl/src/legacy/daemon.c",
    "//fusl/src/legacy/err.c",
    "//fusl/src/legacy/euidaccess.c",
    "//fusl/src/legacy/ftw.c",
    "//fusl/src/legacy/futimes.c",
    "//fusl/src/legacy/getdtablesize.c",
    "//fusl/src/legacy/getloadavg.c",
    "//fusl/src/legacy/getpagesize.c",
    "//fusl/src/legacy/getpass.c",
    "//fusl/src/legacy/getusershell.c",
    "//fusl/src/legacy/isastream.c",
    "//fusl/src/legacy/lutimes.c",
    "//fusl/src/legacy/ulimit.c",
    "//fusl/src/legacy/utmpx.c",
    "//fusl/src/legacy/valloc.c",
    "//fusl/src/linux/adjtime.c",
    "//fusl/src/linux/adjtimex.c",
    "//fusl/src/linux/arch_prctl.c",
    "//fusl/src/linux/brk.c",
    "//fusl/src/linux/cache.c",
    "//fusl/src/linux/cap.c",
    "//fusl/src/linux/chroot.c",
    "//fusl/src/linux/clock_adjtime.c",
    "//fusl/src/linux/clone.c",
    "//fusl/src/linux/epoll.c",
    "//fusl/src/linux/eventfd.c",
    "//fusl/src/linux/fallocate.c",
    "//fusl/src/linux/fanotify.c",
    "//fusl/src/linux/flock.c",
    "//fusl/src/linux/inotify.c",
    "//fusl/src/linux/ioperm.c",
    "//fusl/src/linux/iopl.c",
    "//fusl/src/linux/klogctl.c",
    "//fusl/src/linux/module.c",
    "//fusl/src/linux/mount.c",
    "//fusl/src/linux/personality.c",
    "//fusl/src/linux/pivot_root.c",
    "//fusl/src/linux/ppoll.c",
    "//fusl/src/linux/prctl.c",
    "//fusl/src/linux/prlimit.c",
    "//fusl/src/linux/process_vm.c",
    "//fusl/src/linux/ptrace.c",
    "//fusl/src/linux/quotactl.c",
    "//fusl/src/linux/readahead.c",
    "//fusl/src/linux/reboot.c",
    "//fusl/src/linux/remap_file_pages.c",
    "//fusl/src/linux/sbrk.c",
    "//fusl/src/linux/sendfile.c",
    "//fusl/src/linux/setfsgid.c",
    "//fusl/src/linux/setfsuid.c",
    "//fusl/src/linux/setgroups.c",
    "//fusl/src/linux/sethostname.c",
    "//fusl/src/linux/setns.c",
    "//fusl/src/linux/settimeofday.c",
    "//fusl/src/linux/signalfd.c",
    "//fusl/src/linux/splice.c",
    "//fusl/src/linux/stime.c",
    "//fusl/src/linux/swap.c",
    "//fusl/src/linux/sync_file_range.c",
    "//fusl/src/linux/syncfs.c",
    "//fusl/src/linux/sysinfo.c",
    "//fusl/src/linux/tee.c",
    "//fusl/src/linux/timerfd.c",
    "//fusl/src/linux/unshare.c",
    "//fusl/src/linux/utimes.c",
    "//fusl/src/linux/vhangup.c",
    "//fusl/src/linux/vmsplice.c",
    "//fusl/src/linux/wait3.c",
    "//fusl/src/linux/wait4.c",
    "//fusl/src/linux/xattr.c",
    "//fusl/src/locale/__lctrans.c",
    "//fusl/src/locale/__mo_lookup.c",
    "//fusl/src/locale/bind_textdomain_codeset.c",
    "//fusl/src/locale/c_locale.c",
    "//fusl/src/locale/catclose.c",
    "//fusl/src/locale/catgets.c",
    "//fusl/src/locale/catopen.c",
    "//fusl/src/locale/dcngettext.c",
    "//fusl/src/locale/duplocale.c",
    "//fusl/src/locale/freelocale.c",
    "//fusl/src/locale/iconv.c",
    "//fusl/src/locale/langinfo.c",
    "//fusl/src/locale/locale_map.c",
    "//fusl/src/locale/localeconv.c",
    "//fusl/src/locale/newlocale.c",
    "//fusl/src/locale/pleval.c",
    "//fusl/src/locale/setlocale.c",
    "//fusl/src/locale/strcoll.c",
    "//fusl/src/locale/strfmon.c",
    "//fusl/src/locale/strxfrm.c",
    "//fusl/src/locale/textdomain.c",
    "//fusl/src/locale/uselocale.c",
    "//fusl/src/locale/wcscoll.c",
    "//fusl/src/locale/wcsxfrm.c",
    "//fusl/src/malloc/__brk.c",
    "//fusl/src/malloc/aligned_alloc.c",
    "//fusl/src/malloc/calloc.c",
    "//fusl/src/malloc/expand_heap.c",
    "//fusl/src/malloc/lite_malloc.c",
    "//fusl/src/malloc/malloc.c",
    "//fusl/src/malloc/malloc_usable_size.c",
    "//fusl/src/malloc/memalign.c",
    "//fusl/src/malloc/posix_memalign.c",
    "//fusl/src/math/__cos.c",
    "//fusl/src/math/__cosdf.c",
    "//fusl/src/math/__cosl.c",
    "//fusl/src/math/__expo2.c",
    "//fusl/src/math/__expo2f.c",
    "//fusl/src/math/__fpclassify.c",
    "//fusl/src/math/__fpclassifyf.c",
    "//fusl/src/math/__fpclassifyl.c",
    "//fusl/src/math/__invtrigl.c",
    "//fusl/src/math/__polevll.c",
    "//fusl/src/math/__rem_pio2.c",
    "//fusl/src/math/__rem_pio2_large.c",
    "//fusl/src/math/__rem_pio2f.c",
    "//fusl/src/math/__rem_pio2l.c",
    "//fusl/src/math/__signbit.c",
    "//fusl/src/math/__signbitf.c",
    "//fusl/src/math/__signbitl.c",
    "//fusl/src/math/__sin.c",
    "//fusl/src/math/__sindf.c",
    "//fusl/src/math/__sinl.c",
    "//fusl/src/math/__tan.c",
    "//fusl/src/math/__tandf.c",
    "//fusl/src/math/__tanl.c",
    "//fusl/src/math/acos.c",
    "//fusl/src/math/acosf.c",
    "//fusl/src/math/acosh.c",
    "//fusl/src/math/acoshf.c",
    "//fusl/src/math/acoshl.c",
    "//fusl/src/math/acosl.c",
    "//fusl/src/math/asin.c",
    "//fusl/src/math/asinf.c",
    "//fusl/src/math/asinh.c",
    "//fusl/src/math/asinhf.c",
    "//fusl/src/math/asinhl.c",
    "//fusl/src/math/asinl.c",
    "//fusl/src/math/atan.c",
    "//fusl/src/math/atan2.c",
    "//fusl/src/math/atan2f.c",
    "//fusl/src/math/atan2l.c",
    "//fusl/src/math/atanf.c",
    "//fusl/src/math/atanh.c",
    "//fusl/src/math/atanhf.c",
    "//fusl/src/math/atanhl.c",
    "//fusl/src/math/atanl.c",
    "//fusl/src/math/cbrt.c",
    "//fusl/src/math/cbrtf.c",
    "//fusl/src/math/cbrtl.c",
    "//fusl/src/math/ceil.c",
    "//fusl/src/math/ceilf.c",
    "//fusl/src/math/ceill.c",
    "//fusl/src/math/copysign.c",
    "//fusl/src/math/copysignf.c",
    "//fusl/src/math/copysignl.c",
    "//fusl/src/math/cos.c",
    "//fusl/src/math/cosf.c",
    "//fusl/src/math/cosh.c",
    "//fusl/src/math/coshf.c",
    "//fusl/src/math/coshl.c",
    "//fusl/src/math/cosl.c",
    "//fusl/src/math/erf.c",
    "//fusl/src/math/erff.c",
    "//fusl/src/math/erfl.c",
    "//fusl/src/math/exp.c",
    "//fusl/src/math/exp10.c",
    "//fusl/src/math/exp10f.c",
    "//fusl/src/math/exp10l.c",
    "//fusl/src/math/exp2.c",
    "//fusl/src/math/exp2f.c",
    "//fusl/src/math/exp2l.c",
    "//fusl/src/math/expf.c",
    "//fusl/src/math/expl.c",
    "//fusl/src/math/expm1.c",
    "//fusl/src/math/expm1f.c",
    "//fusl/src/math/expm1l.c",
    "//fusl/src/math/fabs.c",
    "//fusl/src/math/fabsf.c",
    "//fusl/src/math/fabsl.c",
    "//fusl/src/math/fdim.c",
    "//fusl/src/math/fdimf.c",
    "//fusl/src/math/fdiml.c",
    "//fusl/src/math/finite.c",
    "//fusl/src/math/finitef.c",
    "//fusl/src/math/floor.c",
    "//fusl/src/math/floorf.c",
    "//fusl/src/math/floorl.c",
    "//fusl/src/math/fma.c",
    "//fusl/src/math/fmaf.c",
    "//fusl/src/math/fmal.c",
    "//fusl/src/math/fmax.c",
    "//fusl/src/math/fmaxf.c",
    "//fusl/src/math/fmaxl.c",
    "//fusl/src/math/fmin.c",
    "//fusl/src/math/fminf.c",
    "//fusl/src/math/fminl.c",
    "//fusl/src/math/fmod.c",
    "//fusl/src/math/fmodf.c",
    "//fusl/src/math/fmodl.c",
    "//fusl/src/math/frexp.c",
    "//fusl/src/math/frexpf.c",
    "//fusl/src/math/frexpl.c",
    "//fusl/src/math/hypot.c",
    "//fusl/src/math/hypotf.c",
    "//fusl/src/math/hypotl.c",
    "//fusl/src/math/ilogb.c",
    "//fusl/src/math/ilogbf.c",
    "//fusl/src/math/ilogbl.c",
    "//fusl/src/math/j0.c",
    "//fusl/src/math/j0f.c",
    "//fusl/src/math/j1.c",
    "//fusl/src/math/j1f.c",
    "//fusl/src/math/jn.c",
    "//fusl/src/math/jnf.c",
    "//fusl/src/math/ldexp.c",
    "//fusl/src/math/ldexpf.c",
    "//fusl/src/math/ldexpl.c",
    "//fusl/src/math/lgamma.c",
    "//fusl/src/math/lgamma_r.c",
    "//fusl/src/math/lgammaf.c",
    "//fusl/src/math/lgammaf_r.c",
    "//fusl/src/math/lgammal.c",
    "//fusl/src/math/llrint.c",
    "//fusl/src/math/llrintf.c",
    "//fusl/src/math/llrintl.c",
    "//fusl/src/math/llround.c",
    "//fusl/src/math/llroundf.c",
    "//fusl/src/math/llroundl.c",
    "//fusl/src/math/log.c",
    "//fusl/src/math/log10.c",
    "//fusl/src/math/log10f.c",
    "//fusl/src/math/log10l.c",
    "//fusl/src/math/log1p.c",
    "//fusl/src/math/log1pf.c",
    "//fusl/src/math/log1pl.c",
    "//fusl/src/math/log2.c",
    "//fusl/src/math/log2f.c",
    "//fusl/src/math/log2l.c",
    "//fusl/src/math/logb.c",
    "//fusl/src/math/logbf.c",
    "//fusl/src/math/logbl.c",
    "//fusl/src/math/logf.c",
    "//fusl/src/math/logl.c",
    "//fusl/src/math/lrint.c",
    "//fusl/src/math/lrintf.c",
    "//fusl/src/math/lrintl.c",
    "//fusl/src/math/lround.c",
    "//fusl/src/math/lroundf.c",
    "//fusl/src/math/lroundl.c",
    "//fusl/src/math/modf.c",
    "//fusl/src/math/modff.c",
    "//fusl/src/math/modfl.c",
    "//fusl/src/math/nan.c",
    "//fusl/src/math/nanf.c",
    "//fusl/src/math/nanl.c",
    "//fusl/src/math/nearbyint.c",
    "//fusl/src/math/nearbyintf.c",
    "//fusl/src/math/nearbyintl.c",
    "//fusl/src/math/nextafter.c",
    "//fusl/src/math/nextafterf.c",
    "//fusl/src/math/nextafterl.c",
    "//fusl/src/math/nexttoward.c",
    "//fusl/src/math/nexttowardf.c",
    "//fusl/src/math/nexttowardl.c",
    "//fusl/src/math/pow.c",
    "//fusl/src/math/powf.c",
    "//fusl/src/math/powl.c",
    "//fusl/src/math/remainder.c",
    "//fusl/src/math/remainderf.c",
    "//fusl/src/math/remainderl.c",
    "//fusl/src/math/remquo.c",
    "//fusl/src/math/remquof.c",
    "//fusl/src/math/remquol.c",
    "//fusl/src/math/rint.c",
    "//fusl/src/math/rintf.c",
    "//fusl/src/math/rintl.c",
    "//fusl/src/math/round.c",
    "//fusl/src/math/roundf.c",
    "//fusl/src/math/roundl.c",
    "//fusl/src/math/scalb.c",
    "//fusl/src/math/scalbf.c",
    "//fusl/src/math/scalbln.c",
    "//fusl/src/math/scalblnf.c",
    "//fusl/src/math/scalblnl.c",
    "//fusl/src/math/scalbn.c",
    "//fusl/src/math/scalbnf.c",
    "//fusl/src/math/scalbnl.c",
    "//fusl/src/math/signgam.c",
    "//fusl/src/math/significand.c",
    "//fusl/src/math/significandf.c",
    "//fusl/src/math/sin.c",
    "//fusl/src/math/sincos.c",
    "//fusl/src/math/sincosf.c",
    "//fusl/src/math/sincosl.c",
    "//fusl/src/math/sinf.c",
    "//fusl/src/math/sinh.c",
    "//fusl/src/math/sinhf.c",
    "//fusl/src/math/sinhl.c",
    "//fusl/src/math/sinl.c",
    "//fusl/src/math/sqrt.c",
    "//fusl/src/math/sqrtf.c",
    "//fusl/src/math/sqrtl.c",
    "//fusl/src/math/tan.c",
    "//fusl/src/math/tanf.c",
    "//fusl/src/math/tanh.c",
    "//fusl/src/math/tanhf.c",
    "//fusl/src/math/tanhl.c",
    "//fusl/src/math/tanl.c",
    "//fusl/src/math/tgamma.c",
    "//fusl/src/math/tgammaf.c",
    "//fusl/src/math/tgammal.c",
    "//fusl/src/math/trunc.c",
    "//fusl/src/math/truncf.c",
    "//fusl/src/math/truncl.c",
    "//fusl/src/misc/a64l.c",
    "//fusl/src/misc/basename.c",
    "//fusl/src/misc/dirname.c",
    "//fusl/src/misc/ffs.c",
    "//fusl/src/misc/ffsl.c",
    "//fusl/src/misc/ffsll.c",
    "//fusl/src/misc/fmtmsg.c",
    "//fusl/src/misc/forkpty.c",
    "//fusl/src/misc/get_current_dir_name.c",
    "//fusl/src/misc/getauxval.c",
    "//fusl/src/misc/getdomainname.c",
    "//fusl/src/misc/gethostid.c",
    "//fusl/src/misc/getopt.c",
    "//fusl/src/misc/getopt_long.c",
    "//fusl/src/misc/getpriority.c",
    "//fusl/src/misc/getresgid.c",
    "//fusl/src/misc/getresuid.c",
    "//fusl/src/misc/getrlimit.c",
    "//fusl/src/misc/getrusage.c",
    "//fusl/src/misc/getsubopt.c",
    "//fusl/src/misc/initgroups.c",
    "//fusl/src/misc/ioctl.c",
    "//fusl/src/misc/issetugid.c",
    "//fusl/src/misc/lockf.c",
    "//fusl/src/misc/login_tty.c",
    "//fusl/src/misc/mntent.c",
    "//fusl/src/misc/nftw.c",
    "//fusl/src/misc/openpty.c",
    "//fusl/src/misc/ptsname.c",
    "//fusl/src/misc/pty.c",
    "//fusl/src/misc/realpath.c",
    "//fusl/src/misc/setdomainname.c",
    "//fusl/src/misc/setpriority.c",
    "//fusl/src/misc/setrlimit.c",
    "//fusl/src/misc/syscall.c",
    "//fusl/src/misc/syslog.c",
    "//fusl/src/misc/uname.c",
    "//fusl/src/misc/wordexp.c",
    "//fusl/src/mman/madvise.c",
    "//fusl/src/mman/mincore.c",
    "//fusl/src/mman/mlock.c",
    "//fusl/src/mman/mlockall.c",
    "//fusl/src/mman/mmap.c",
    "//fusl/src/mman/mprotect.c",
    "//fusl/src/mman/mremap.c",
    "//fusl/src/mman/msync.c",
    "//fusl/src/mman/munlock.c",
    "//fusl/src/mman/munlockall.c",
    "//fusl/src/mman/munmap.c",
    "//fusl/src/mman/posix_madvise.c",
    "//fusl/src/mman/shm_open.c",
    "//fusl/src/mq/mq_close.c",
    "//fusl/src/mq/mq_getattr.c",
    "//fusl/src/mq/mq_notify.c",
    "//fusl/src/mq/mq_open.c",
    "//fusl/src/mq/mq_receive.c",
    "//fusl/src/mq/mq_send.c",
    "//fusl/src/mq/mq_setattr.c",
    "//fusl/src/mq/mq_timedreceive.c",
    "//fusl/src/mq/mq_timedsend.c",
    "//fusl/src/mq/mq_unlink.c",
    "//fusl/src/multibyte/btowc.c",
    "//fusl/src/multibyte/c16rtomb.c",
    "//fusl/src/multibyte/c32rtomb.c",
    "//fusl/src/multibyte/internal.c",
    "//fusl/src/multibyte/mblen.c",
    "//fusl/src/multibyte/mbrlen.c",
    "//fusl/src/multibyte/mbrtoc16.c",
    "//fusl/src/multibyte/mbrtoc32.c",
    "//fusl/src/multibyte/mbrtowc.c",
    "//fusl/src/multibyte/mbsinit.c",
    "//fusl/src/multibyte/mbsnrtowcs.c",
    "//fusl/src/multibyte/mbsrtowcs.c",
    "//fusl/src/multibyte/mbstowcs.c",
    "//fusl/src/multibyte/mbtowc.c",
    "//fusl/src/multibyte/wcrtomb.c",
    "//fusl/src/multibyte/wcsnrtombs.c",
    "//fusl/src/multibyte/wcsrtombs.c",
    "//fusl/src/multibyte/wcstombs.c",
    "//fusl/src/multibyte/wctob.c",
    "//fusl/src/multibyte/wctomb.c",
    "//fusl/src/network/accept.c",
    "//fusl/src/network/accept4.c",
    "//fusl/src/network/bind.c",
    "//fusl/src/network/connect.c",
    "//fusl/src/network/dn_comp.c",
    "//fusl/src/network/dn_expand.c",
    "//fusl/src/network/dn_skipname.c",
    "//fusl/src/network/dns_parse.c",
    "//fusl/src/network/ent.c",
    "//fusl/src/network/ether.c",
    "//fusl/src/network/freeaddrinfo.c",
    "//fusl/src/network/gai_strerror.c",
    "//fusl/src/network/getaddrinfo.c",
    "//fusl/src/network/gethostbyaddr.c",
    "//fusl/src/network/gethostbyaddr_r.c",
    "//fusl/src/network/gethostbyname.c",
    "//fusl/src/network/gethostbyname2.c",
    "//fusl/src/network/gethostbyname2_r.c",
    "//fusl/src/network/gethostbyname_r.c",
    "//fusl/src/network/getifaddrs.c",
    "//fusl/src/network/getnameinfo.c",
    "//fusl/src/network/getpeername.c",
    "//fusl/src/network/getservbyname.c",
    "//fusl/src/network/getservbyname_r.c",
    "//fusl/src/network/getservbyport.c",
    "//fusl/src/network/getservbyport_r.c",
    "//fusl/src/network/getsockname.c",
    "//fusl/src/network/getsockopt.c",
    "//fusl/src/network/h_errno.c",
    "//fusl/src/network/herror.c",
    "//fusl/src/network/hstrerror.c",
    "//fusl/src/network/htonl.c",
    "//fusl/src/network/htons.c",
    "//fusl/src/network/if_freenameindex.c",
    "//fusl/src/network/if_indextoname.c",
    "//fusl/src/network/if_nameindex.c",
    "//fusl/src/network/if_nametoindex.c",
    "//fusl/src/network/in6addr_any.c",
    "//fusl/src/network/in6addr_loopback.c",
    "//fusl/src/network/inet_addr.c",
    "//fusl/src/network/inet_aton.c",
    "//fusl/src/network/inet_legacy.c",
    "//fusl/src/network/inet_ntoa.c",
    "//fusl/src/network/inet_ntop.c",
    "//fusl/src/network/inet_pton.c",
    "//fusl/src/network/listen.c",
    "//fusl/src/network/lookup_ipliteral.c",
    "//fusl/src/network/lookup_name.c",
    "//fusl/src/network/lookup_serv.c",
    "//fusl/src/network/netlink.c",
    "//fusl/src/network/netname.c",
    "//fusl/src/network/ns_parse.c",
    "//fusl/src/network/ntohl.c",
    "//fusl/src/network/ntohs.c",
    "//fusl/src/network/proto.c",
    "//fusl/src/network/recv.c",
    "//fusl/src/network/recvfrom.c",
    "//fusl/src/network/recvmmsg.c",
    "//fusl/src/network/recvmsg.c",
    "//fusl/src/network/res_init.c",
    "//fusl/src/network/res_mkquery.c",
    "//fusl/src/network/res_msend.c",
    "//fusl/src/network/res_query.c",
    "//fusl/src/network/res_querydomain.c",
    "//fusl/src/network/res_send.c",
    "//fusl/src/network/res_state.c",
    "//fusl/src/network/send.c",
    "//fusl/src/network/sendmmsg.c",
    "//fusl/src/network/sendmsg.c",
    "//fusl/src/network/sendto.c",
    "//fusl/src/network/serv.c",
    "//fusl/src/network/setsockopt.c",
    "//fusl/src/network/shutdown.c",
    "//fusl/src/network/sockatmark.c",
    "//fusl/src/network/socket.c",
    "//fusl/src/network/socketpair.c",
    "//fusl/src/passwd/fgetgrent.c",
    "//fusl/src/passwd/fgetpwent.c",
    "//fusl/src/passwd/fgetspent.c",
    "//fusl/src/passwd/getgr_a.c",
    "//fusl/src/passwd/getgr_r.c",
    "//fusl/src/passwd/getgrent.c",
    "//fusl/src/passwd/getgrent_a.c",
    "//fusl/src/passwd/getgrouplist.c",
    "//fusl/src/passwd/getpw_a.c",
    "//fusl/src/passwd/getpw_r.c",
    "//fusl/src/passwd/getpwent.c",
    "//fusl/src/passwd/getpwent_a.c",
    "//fusl/src/passwd/getspent.c",
    "//fusl/src/passwd/getspnam.c",
    "//fusl/src/passwd/getspnam_r.c",
    "//fusl/src/passwd/lckpwdf.c",
    "//fusl/src/passwd/nscd_query.c",
    "//fusl/src/passwd/putgrent.c",
    "//fusl/src/passwd/putpwent.c",
    "//fusl/src/passwd/putspent.c",
    "//fusl/src/prng/__rand48_step.c",
    "//fusl/src/prng/__seed48.c",
    "//fusl/src/prng/drand48.c",
    "//fusl/src/prng/lcong48.c",
    "//fusl/src/prng/lrand48.c",
    "//fusl/src/prng/mrand48.c",
    "//fusl/src/prng/rand.c",
    "//fusl/src/prng/rand_r.c",
    "//fusl/src/prng/random.c",
    "//fusl/src/prng/seed48.c",
    "//fusl/src/prng/srand48.c",
    "//fusl/src/process/execl.c",
    "//fusl/src/process/execle.c",
    "//fusl/src/process/execlp.c",
    "//fusl/src/process/execv.c",
    "//fusl/src/process/execve.c",
    "//fusl/src/process/execvp.c",
    "//fusl/src/process/fexecve.c",
    "//fusl/src/process/fork.c",
    "//fusl/src/process/posix_spawn.c",
    "//fusl/src/process/posix_spawn_file_actions_addclose.c",
    "//fusl/src/process/posix_spawn_file_actions_adddup2.c",
    "//fusl/src/process/posix_spawn_file_actions_addopen.c",
    "//fusl/src/process/posix_spawn_file_actions_destroy.c",
    "//fusl/src/process/posix_spawn_file_actions_init.c",
    "//fusl/src/process/posix_spawnattr_destroy.c",
    "//fusl/src/process/posix_spawnattr_getflags.c",
    "//fusl/src/process/posix_spawnattr_getpgroup.c",
    "//fusl/src/process/posix_spawnattr_getsigdefault.c",
    "//fusl/src/process/posix_spawnattr_getsigmask.c",
    "//fusl/src/process/posix_spawnattr_init.c",
    "//fusl/src/process/posix_spawnattr_sched.c",
    "//fusl/src/process/posix_spawnattr_setflags.c",
    "//fusl/src/process/posix_spawnattr_setpgroup.c",
    "//fusl/src/process/posix_spawnattr_setsigdefault.c",
    "//fusl/src/process/posix_spawnattr_setsigmask.c",
    "//fusl/src/process/posix_spawnp.c",
    "//fusl/src/process/system.c",
    "//fusl/src/process/vfork.c",
    "//fusl/src/process/wait.c",
    "//fusl/src/process/waitid.c",
    "//fusl/src/process/waitpid.c",
    "//fusl/src/regex/fnmatch.c",
    "//fusl/src/regex/glob.c",
    "//fusl/src/regex/regcomp.c",
    "//fusl/src/regex/regerror.c",
    "//fusl/src/regex/regexec.c",
    "//fusl/src/regex/tre-mem.c",
    "//fusl/src/sched/affinity.c",
    "//fusl/src/sched/sched_cpucount.c",
    "//fusl/src/sched/sched_get_priority_max.c",
    "//fusl/src/sched/sched_getparam.c",
    "//fusl/src/sched/sched_getscheduler.c",
    "//fusl/src/sched/sched_rr_get_interval.c",
    "//fusl/src/sched/sched_setparam.c",
    "//fusl/src/sched/sched_setscheduler.c",
    "//fusl/src/sched/sched_yield.c",
    "//fusl/src/search/hsearch.c",
    "//fusl/src/search/insque.c",
    "//fusl/src/search/lsearch.c",
    "//fusl/src/search/tdestroy.c",
    "//fusl/src/search/tsearch_avl.c",
    "//fusl/src/select/poll.c",
    "//fusl/src/select/pselect.c",
    "//fusl/src/select/select.c",
    "//fusl/src/setjmp/longjmp.c",
    "//fusl/src/setjmp/setjmp.c",
    "//fusl/src/signal/block.c",
    "//fusl/src/signal/getitimer.c",
    "//fusl/src/signal/kill.c",
    "//fusl/src/signal/killpg.c",
    "//fusl/src/signal/psiginfo.c",
    "//fusl/src/signal/psignal.c",
    "//fusl/src/signal/raise.c",
    "//fusl/src/signal/restore.c",
    "//fusl/src/signal/setitimer.c",
    "//fusl/src/signal/sigaction.c",
    "//fusl/src/signal/sigaddset.c",
    "//fusl/src/signal/sigaltstack.c",
    "//fusl/src/signal/sigandset.c",
    "//fusl/src/signal/sigdelset.c",
    "//fusl/src/signal/sigemptyset.c",
    "//fusl/src/signal/sigfillset.c",
    "//fusl/src/signal/sighold.c",
    "//fusl/src/signal/sigignore.c",
    "//fusl/src/signal/siginterrupt.c",
    "//fusl/src/signal/sigisemptyset.c",
    "//fusl/src/signal/sigismember.c",
    "//fusl/src/signal/siglongjmp.c",
    "//fusl/src/signal/signal.c",
    "//fusl/src/signal/sigorset.c",
    "//fusl/src/signal/sigpause.c",
    "//fusl/src/signal/sigpending.c",
    "//fusl/src/signal/sigprocmask.c",
    "//fusl/src/signal/sigqueue.c",
    "//fusl/src/signal/sigrelse.c",
    "//fusl/src/signal/sigrtmax.c",
    "//fusl/src/signal/sigrtmin.c",
    "//fusl/src/signal/sigset.c",
    "//fusl/src/signal/sigsetjmp.c",
    "//fusl/src/signal/sigsetjmp_tail.c",
    "//fusl/src/signal/sigsuspend.c",
    "//fusl/src/signal/sigtimedwait.c",
    "//fusl/src/signal/sigwait.c",
    "//fusl/src/signal/sigwaitinfo.c",
    "//fusl/src/stat/__xstat.c",
    "//fusl/src/stat/chmod.c",
    "//fusl/src/stat/fchmod.c",
    "//fusl/src/stat/fchmodat.c",
    "//fusl/src/stat/fstat.c",
    "//fusl/src/stat/fstatat.c",
    "//fusl/src/stat/futimens.c",
    "//fusl/src/stat/futimesat.c",
    "//fusl/src/stat/lchmod.c",
    "//fusl/src/stat/lstat.c",
    "//fusl/src/stat/mkdir.c",
    "//fusl/src/stat/mkdirat.c",
    "//fusl/src/stat/mkfifo.c",
    "//fusl/src/stat/mkfifoat.c",
    "//fusl/src/stat/mknod.c",
    "//fusl/src/stat/mknodat.c",
    "//fusl/src/stat/stat.c",
    "//fusl/src/stat/statvfs.c",
    "//fusl/src/stat/umask.c",
    "//fusl/src/stat/utimensat.c",
    "//fusl/src/stdio/__fclose_ca.c",
    "//fusl/src/stdio/__fdopen.c",
    "//fusl/src/stdio/__fmodeflags.c",
    "//fusl/src/stdio/__fopen_rb_ca.c",
    "//fusl/src/stdio/__lockfile.c",
    "//fusl/src/stdio/__overflow.c",
    "//fusl/src/stdio/__stdio_close.c",
    "//fusl/src/stdio/__stdio_exit.c",
    "//fusl/src/stdio/__stdio_read.c",
    "//fusl/src/stdio/__stdio_seek.c",
    "//fusl/src/stdio/__stdio_write.c",
    "//fusl/src/stdio/__stdout_write.c",
    "//fusl/src/stdio/__string_read.c",
    "//fusl/src/stdio/__toread.c",
    "//fusl/src/stdio/__towrite.c",
    "//fusl/src/stdio/__uflow.c",
    "//fusl/src/stdio/asprintf.c",
    "//fusl/src/stdio/clearerr.c",
    "//fusl/src/stdio/dprintf.c",
    "//fusl/src/stdio/ext.c",
    "//fusl/src/stdio/ext2.c",
    "//fusl/src/stdio/fclose.c",
    "//fusl/src/stdio/feof.c",
    "//fusl/src/stdio/ferror.c",
    "//fusl/src/stdio/fflush.c",
    "//fusl/src/stdio/fgetc.c",
    "//fusl/src/stdio/fgetln.c",
    "//fusl/src/stdio/fgetpos.c",
    "//fusl/src/stdio/fgets.c",
    "//fusl/src/stdio/fgetwc.c",
    "//fusl/src/stdio/fgetws.c",
    "//fusl/src/stdio/fileno.c",
    "//fusl/src/stdio/flockfile.c",
    "//fusl/src/stdio/fmemopen.c",
    "//fusl/src/stdio/fopen.c",
    "//fusl/src/stdio/fprintf.c",
    "//fusl/src/stdio/fputc.c",
    "//fusl/src/stdio/fputs.c",
    "//fusl/src/stdio/fputwc.c",
    "//fusl/src/stdio/fputws.c",
    "//fusl/src/stdio/fread.c",
    "//fusl/src/stdio/freopen.c",
    "//fusl/src/stdio/fscanf.c",
    "//fusl/src/stdio/fseek.c",
    "//fusl/src/stdio/fsetpos.c",
    "//fusl/src/stdio/ftell.c",
    "//fusl/src/stdio/ftrylockfile.c",
    "//fusl/src/stdio/funlockfile.c",
    "//fusl/src/stdio/fwide.c",
    "//fusl/src/stdio/fwprintf.c",
    "//fusl/src/stdio/fwrite.c",
    "//fusl/src/stdio/fwscanf.c",
    "//fusl/src/stdio/getc.c",
    "//fusl/src/stdio/getc_unlocked.c",
    "//fusl/src/stdio/getchar.c",
    "//fusl/src/stdio/getchar_unlocked.c",
    "//fusl/src/stdio/getdelim.c",
    "//fusl/src/stdio/getline.c",
    "//fusl/src/stdio/gets.c",
    "//fusl/src/stdio/getw.c",
    "//fusl/src/stdio/getwc.c",
    "//fusl/src/stdio/getwchar.c",
    "//fusl/src/stdio/ofl.c",
    "//fusl/src/stdio/ofl_add.c",
    "//fusl/src/stdio/open_memstream.c",
    "//fusl/src/stdio/open_wmemstream.c",
    "//fusl/src/stdio/pclose.c",
    "//fusl/src/stdio/perror.c",
    "//fusl/src/stdio/popen.c",
    "//fusl/src/stdio/printf.c",
    "//fusl/src/stdio/putc.c",
    "//fusl/src/stdio/putc_unlocked.c",
    "//fusl/src/stdio/putchar.c",
    "//fusl/src/stdio/putchar_unlocked.c",
    "//fusl/src/stdio/puts.c",
    "//fusl/src/stdio/putw.c",
    "//fusl/src/stdio/putwc.c",
    "//fusl/src/stdio/putwchar.c",
    "//fusl/src/stdio/remove.c",
    "//fusl/src/stdio/rename.c",
    "//fusl/src/stdio/rewind.c",
    "//fusl/src/stdio/scanf.c",
    "//fusl/src/stdio/setbuf.c",
    "//fusl/src/stdio/setbuffer.c",
    "//fusl/src/stdio/setlinebuf.c",
    "//fusl/src/stdio/setvbuf.c",
    "//fusl/src/stdio/snprintf.c",
    "//fusl/src/stdio/sprintf.c",
    "//fusl/src/stdio/sscanf.c",
    "//fusl/src/stdio/stderr.c",
    "//fusl/src/stdio/stdin.c",
    "//fusl/src/stdio/stdout.c",
    "//fusl/src/stdio/swprintf.c",
    "//fusl/src/stdio/swscanf.c",
    "//fusl/src/stdio/tempnam.c",
    "//fusl/src/stdio/tmpfile.c",
    "//fusl/src/stdio/tmpnam.c",
    "//fusl/src/stdio/ungetc.c",
    "//fusl/src/stdio/ungetwc.c",
    "//fusl/src/stdio/vasprintf.c",
    "//fusl/src/stdio/vdprintf.c",
    "//fusl/src/stdio/vfprintf.c",
    "//fusl/src/stdio/vfscanf.c",
    "//fusl/src/stdio/vfwprintf.c",
    "//fusl/src/stdio/vfwscanf.c",
    "//fusl/src/stdio/vprintf.c",
    "//fusl/src/stdio/vscanf.c",
    "//fusl/src/stdio/vsnprintf.c",
    "//fusl/src/stdio/vsprintf.c",
    "//fusl/src/stdio/vsscanf.c",
    "//fusl/src/stdio/vswprintf.c",
    "//fusl/src/stdio/vswscanf.c",
    "//fusl/src/stdio/vwprintf.c",
    "//fusl/src/stdio/vwscanf.c",
    "//fusl/src/stdio/wprintf.c",
    "//fusl/src/stdio/wscanf.c",
    "//fusl/src/stdlib/abs.c",
    "//fusl/src/stdlib/atof.c",
    "//fusl/src/stdlib/atoi.c",
    "//fusl/src/stdlib/atol.c",
    "//fusl/src/stdlib/atoll.c",
    "//fusl/src/stdlib/bsearch.c",
    "//fusl/src/stdlib/div.c",
    "//fusl/src/stdlib/ecvt.c",
    "//fusl/src/stdlib/fcvt.c",
    "//fusl/src/stdlib/gcvt.c",
    "//fusl/src/stdlib/imaxabs.c",
    "//fusl/src/stdlib/imaxdiv.c",
    "//fusl/src/stdlib/labs.c",
    "//fusl/src/stdlib/ldiv.c",
    "//fusl/src/stdlib/llabs.c",
    "//fusl/src/stdlib/lldiv.c",
    "//fusl/src/stdlib/qsort.c",
    "//fusl/src/stdlib/strtod.c",
    "//fusl/src/stdlib/strtol.c",
    "//fusl/src/stdlib/wcstod.c",
    "//fusl/src/stdlib/wcstol.c",
    "//fusl/src/string/bcmp.c",
    "//fusl/src/string/bcopy.c",
    "//fusl/src/string/bzero.c",
    "//fusl/src/string/index.c",
    "//fusl/src/string/memccpy.c",
    "//fusl/src/string/memchr.c",
    "//fusl/src/string/memcmp.c",
    "//fusl/src/string/memcpy.c",
    "//fusl/src/string/memmem.c",
    "//fusl/src/string/memmove.c",
    "//fusl/src/string/mempcpy.c",
    "//fusl/src/string/memrchr.c",
    "//fusl/src/string/memset.c",
    "//fusl/src/string/rindex.c",
    "//fusl/src/string/stpcpy.c",
    "//fusl/src/string/stpncpy.c",
    "//fusl/src/string/strcasecmp.c",
    "//fusl/src/string/strcasestr.c",
    "//fusl/src/string/strcat.c",
    "//fusl/src/string/strchr.c",
    "//fusl/src/string/strchrnul.c",
    "//fusl/src/string/strcmp.c",
    "//fusl/src/string/strcpy.c",
    "//fusl/src/string/strcspn.c",
    "//fusl/src/string/strdup.c",
    "//fusl/src/string/strerror_r.c",
    "//fusl/src/string/strlcat.c",
    "//fusl/src/string/strlcpy.c",
    "//fusl/src/string/strlen.c",
    "//fusl/src/string/strncasecmp.c",
    "//fusl/src/string/strncat.c",
    "//fusl/src/string/strncmp.c",
    "//fusl/src/string/strncpy.c",
    "//fusl/src/string/strndup.c",
    "//fusl/src/string/strnlen.c",
    "//fusl/src/string/strpbrk.c",
    "//fusl/src/string/strrchr.c",
    "//fusl/src/string/strsep.c",
    "//fusl/src/string/strsignal.c",
    "//fusl/src/string/strspn.c",
    "//fusl/src/string/strstr.c",
    "//fusl/src/string/strtok.c",
    "//fusl/src/string/strtok_r.c",
    "//fusl/src/string/strverscmp.c",
    "//fusl/src/string/swab.c",
    "//fusl/src/string/wcpcpy.c",
    "//fusl/src/string/wcpncpy.c",
    "//fusl/src/string/wcscasecmp.c",
    "//fusl/src/string/wcscasecmp_l.c",
    "//fusl/src/string/wcscat.c",
    "//fusl/src/string/wcschr.c",
    "//fusl/src/string/wcscmp.c",
    "//fusl/src/string/wcscpy.c",
    "//fusl/src/string/wcscspn.c",
    "//fusl/src/string/wcsdup.c",
    "//fusl/src/string/wcslen.c",
    "//fusl/src/string/wcsncasecmp.c",
    "//fusl/src/string/wcsncasecmp_l.c",
    "//fusl/src/string/wcsncat.c",
    "//fusl/src/string/wcsncmp.c",
    "//fusl/src/string/wcsncpy.c",
    "//fusl/src/string/wcsnlen.c",
    "//fusl/src/string/wcspbrk.c",
    "//fusl/src/string/wcsrchr.c",
    "//fusl/src/string/wcsspn.c",
    "//fusl/src/string/wcsstr.c",
    "//fusl/src/string/wcstok.c",
    "//fusl/src/string/wcswcs.c",
    "//fusl/src/string/wmemchr.c",
    "//fusl/src/string/wmemcmp.c",
    "//fusl/src/string/wmemcpy.c",
    "//fusl/src/string/wmemmove.c",
    "//fusl/src/string/wmemset.c",
    "//fusl/src/temp/__randname.c",
    "//fusl/src/temp/mkdtemp.c",
    "//fusl/src/temp/mkostemp.c",
    "//fusl/src/temp/mkostemps.c",
    "//fusl/src/temp/mkstemp.c",
    "//fusl/src/temp/mkstemps.c",
    "//fusl/src/temp/mktemp.c",
    "//fusl/src/termios/cfgetospeed.c",
    "//fusl/src/termios/cfmakeraw.c",
    "//fusl/src/termios/cfsetospeed.c",
    "//fusl/src/termios/tcdrain.c",
    "//fusl/src/termios/tcflow.c",
    "//fusl/src/termios/tcflush.c",
    "//fusl/src/termios/tcgetattr.c",
    "//fusl/src/termios/tcgetsid.c",
    "//fusl/src/termios/tcsendbreak.c",
    "//fusl/src/termios/tcsetattr.c",
    "//fusl/src/thread/__futex.c",
    "//fusl/src/thread/__lock.c",
    "//fusl/src/thread/__set_thread_area.c",
    "//fusl/src/thread/__syscall_cp.c",
    "//fusl/src/thread/__timedwait.c",
    "//fusl/src/thread/__tls_get_addr.c",
    "//fusl/src/thread/__unmapself.c",
    "//fusl/src/thread/__wait.c",
    "//fusl/src/thread/call_once.c",
    "//fusl/src/thread/clone.c",
    "//fusl/src/thread/cnd_broadcast.c",
    "//fusl/src/thread/cnd_destroy.c",
    "//fusl/src/thread/cnd_init.c",
    "//fusl/src/thread/cnd_signal.c",
    "//fusl/src/thread/cnd_timedwait.c",
    "//fusl/src/thread/cnd_wait.c",
    "//fusl/src/thread/lock_ptc.c",
    "//fusl/src/thread/mtx_destroy.c",
    "//fusl/src/thread/mtx_init.c",
    "//fusl/src/thread/mtx_lock.c",
    "//fusl/src/thread/mtx_timedlock.c",
    "//fusl/src/thread/mtx_trylock.c",
    "//fusl/src/thread/mtx_unlock.c",
    "//fusl/src/thread/pthread_atfork.c",
    "//fusl/src/thread/pthread_attr_destroy.c",
    "//fusl/src/thread/pthread_attr_get.c",
    "//fusl/src/thread/pthread_attr_init.c",
    "//fusl/src/thread/pthread_attr_setdetachstate.c",
    "//fusl/src/thread/pthread_attr_setguardsize.c",
    "//fusl/src/thread/pthread_attr_setinheritsched.c",
    "//fusl/src/thread/pthread_attr_setschedparam.c",
    "//fusl/src/thread/pthread_attr_setschedpolicy.c",
    "//fusl/src/thread/pthread_attr_setscope.c",
    "//fusl/src/thread/pthread_attr_setstack.c",
    "//fusl/src/thread/pthread_attr_setstacksize.c",
    "//fusl/src/thread/pthread_barrier_destroy.c",
    "//fusl/src/thread/pthread_barrier_init.c",
    "//fusl/src/thread/pthread_barrier_wait.c",
    "//fusl/src/thread/pthread_barrierattr_destroy.c",
    "//fusl/src/thread/pthread_barrierattr_init.c",
    "//fusl/src/thread/pthread_barrierattr_setpshared.c",
    "//fusl/src/thread/pthread_cancel.c",
    "//fusl/src/thread/pthread_cleanup_push.c",
    "//fusl/src/thread/pthread_cond_broadcast.c",
    "//fusl/src/thread/pthread_cond_destroy.c",
    "//fusl/src/thread/pthread_cond_init.c",
    "//fusl/src/thread/pthread_cond_signal.c",
    "//fusl/src/thread/pthread_cond_timedwait.c",
    "//fusl/src/thread/pthread_cond_wait.c",
    "//fusl/src/thread/pthread_condattr_destroy.c",
    "//fusl/src/thread/pthread_condattr_init.c",
    "//fusl/src/thread/pthread_condattr_setclock.c",
    "//fusl/src/thread/pthread_condattr_setpshared.c",
    "//fusl/src/thread/pthread_create.c",
    "//fusl/src/thread/pthread_detach.c",
    "//fusl/src/thread/pthread_equal.c",
    "//fusl/src/thread/pthread_getattr_np.c",
    "//fusl/src/thread/pthread_getconcurrency.c",
    "//fusl/src/thread/pthread_getcpuclockid.c",
    "//fusl/src/thread/pthread_getschedparam.c",
    "//fusl/src/thread/pthread_getspecific.c",
    "//fusl/src/thread/pthread_join.c",
    "//fusl/src/thread/pthread_key_create.c",
    "//fusl/src/thread/pthread_kill.c",
    "//fusl/src/thread/pthread_mutex_consistent.c",
    "//fusl/src/thread/pthread_mutex_destroy.c",
    "//fusl/src/thread/pthread_mutex_getprioceiling.c",
    "//fusl/src/thread/pthread_mutex_init.c",
    "//fusl/src/thread/pthread_mutex_lock.c",
    "//fusl/src/thread/pthread_mutex_setprioceiling.c",
    "//fusl/src/thread/pthread_mutex_timedlock.c",
    "//fusl/src/thread/pthread_mutex_trylock.c",
    "//fusl/src/thread/pthread_mutex_unlock.c",
    "//fusl/src/thread/pthread_mutexattr_destroy.c",
    "//fusl/src/thread/pthread_mutexattr_init.c",
    "//fusl/src/thread/pthread_mutexattr_setprotocol.c",
    "//fusl/src/thread/pthread_mutexattr_setpshared.c",
    "//fusl/src/thread/pthread_mutexattr_setrobust.c",
    "//fusl/src/thread/pthread_mutexattr_settype.c",
    "//fusl/src/thread/pthread_once.c",
    "//fusl/src/thread/pthread_rwlock_destroy.c",
    "//fusl/src/thread/pthread_rwlock_init.c",
    "//fusl/src/thread/pthread_rwlock_rdlock.c",
    "//fusl/src/thread/pthread_rwlock_timedrdlock.c",
    "//fusl/src/thread/pthread_rwlock_timedwrlock.c",
    "//fusl/src/thread/pthread_rwlock_tryrdlock.c",
    "//fusl/src/thread/pthread_rwlock_trywrlock.c",
    "//fusl/src/thread/pthread_rwlock_unlock.c",
    "//fusl/src/thread/pthread_rwlock_wrlock.c",
    "//fusl/src/thread/pthread_rwlockattr_destroy.c",
    "//fusl/src/thread/pthread_rwlockattr_init.c",
    "//fusl/src/thread/pthread_rwlockattr_setpshared.c",
    "//fusl/src/thread/pthread_self.c",
    "//fusl/src/thread/pthread_setcancelstate.c",
    "//fusl/src/thread/pthread_setcanceltype.c",
    "//fusl/src/thread/pthread_setconcurrency.c",
    "//fusl/src/thread/pthread_setschedparam.c",
    "//fusl/src/thread/pthread_setschedprio.c",
    "//fusl/src/thread/pthread_setspecific.c",
    "//fusl/src/thread/pthread_sigmask.c",
    "//fusl/src/thread/pthread_spin_destroy.c",
    "//fusl/src/thread/pthread_spin_init.c",
    "//fusl/src/thread/pthread_spin_lock.c",
    "//fusl/src/thread/pthread_spin_trylock.c",
    "//fusl/src/thread/pthread_spin_unlock.c",
    "//fusl/src/thread/pthread_testcancel.c",
    "//fusl/src/thread/sem_destroy.c",
    "//fusl/src/thread/sem_getvalue.c",
    "//fusl/src/thread/sem_init.c",
    "//fusl/src/thread/sem_open.c",
    "//fusl/src/thread/sem_post.c",
    "//fusl/src/thread/sem_timedwait.c",
    "//fusl/src/thread/sem_trywait.c",
    "//fusl/src/thread/sem_unlink.c",
    "//fusl/src/thread/sem_wait.c",
    "//fusl/src/thread/synccall.c",
    "//fusl/src/thread/syscall_cp.c",
    "//fusl/src/thread/thrd_create.c",
    "//fusl/src/thread/thrd_exit.c",
    "//fusl/src/thread/thrd_join.c",
    "//fusl/src/thread/thrd_sleep.c",
    "//fusl/src/thread/thrd_yield.c",
    "//fusl/src/thread/tls.c",
    "//fusl/src/thread/tss_create.c",
    "//fusl/src/thread/tss_delete.c",
    "//fusl/src/thread/tss_set.c",
    "//fusl/src/thread/vmlock.c",
    "//fusl/src/time/__asctime.c",
    "//fusl/src/time/__map_file.c",
    "//fusl/src/time/__month_to_secs.c",
    "//fusl/src/time/__secs_to_tm.c",
    "//fusl/src/time/__tm_to_secs.c",
    "//fusl/src/time/__tz.c",
    "//fusl/src/time/__year_to_secs.c",
    "//fusl/src/time/asctime.c",
    "//fusl/src/time/asctime_r.c",
    "//fusl/src/time/clock.c",
    "//fusl/src/time/clock_getcpuclockid.c",
    "//fusl/src/time/clock_getres.c",
    "//fusl/src/time/clock_gettime.c",
    "//fusl/src/time/clock_nanosleep.c",
    "//fusl/src/time/clock_settime.c",
    "//fusl/src/time/ctime.c",
    "//fusl/src/time/ctime_r.c",
    "//fusl/src/time/difftime.c",
    "//fusl/src/time/ftime.c",
    "//fusl/src/time/getdate.c",
    "//fusl/src/time/gettimeofday.c",
    "//fusl/src/time/gmtime.c",
    "//fusl/src/time/gmtime_r.c",
    "//fusl/src/time/localtime.c",
    "//fusl/src/time/localtime_r.c",
    "//fusl/src/time/mktime.c",
    "//fusl/src/time/nanosleep.c",
    "//fusl/src/time/strftime.c",
    "//fusl/src/time/strptime.c",
    "//fusl/src/time/time.c",
    "//fusl/src/time/timegm.c",
    "//fusl/src/time/timer_create.c",
    "//fusl/src/time/timer_delete.c",
    "//fusl/src/time/timer_getoverrun.c",
    "//fusl/src/time/timer_gettime.c",
    "//fusl/src/time/timer_settime.c",
    "//fusl/src/time/times.c",
    "//fusl/src/time/timespec_get.c",
    "//fusl/src/time/utime.c",
    "//fusl/src/time/wcsftime.c",
    "//fusl/src/unistd/_exit.c",
    "//fusl/src/unistd/access.c",
    "//fusl/src/unistd/acct.c",
    "//fusl/src/unistd/alarm.c",
    "//fusl/src/unistd/chdir.c",
    "//fusl/src/unistd/chown.c",
    "//fusl/src/unistd/close.c",
    "//fusl/src/unistd/ctermid.c",
    "//fusl/src/unistd/dup.c",
    "//fusl/src/unistd/dup2.c",
    "//fusl/src/unistd/dup3.c",
    "//fusl/src/unistd/faccessat.c",
    "//fusl/src/unistd/fchdir.c",
    "//fusl/src/unistd/fchown.c",
    "//fusl/src/unistd/fchownat.c",
    "//fusl/src/unistd/fdatasync.c",
    "//fusl/src/unistd/fsync.c",
    "//fusl/src/unistd/ftruncate.c",
    "//fusl/src/unistd/getcwd.c",
    "//fusl/src/unistd/getegid.c",
    "//fusl/src/unistd/geteuid.c",
    "//fusl/src/unistd/getgid.c",
    "//fusl/src/unistd/getgroups.c",
    "//fusl/src/unistd/gethostname.c",
    "//fusl/src/unistd/getlogin.c",
    "//fusl/src/unistd/getlogin_r.c",
    "//fusl/src/unistd/getpgid.c",
    "//fusl/src/unistd/getpgrp.c",
    "//fusl/src/unistd/getpid.c",
    "//fusl/src/unistd/getppid.c",
    "//fusl/src/unistd/getsid.c",
    "//fusl/src/unistd/getuid.c",
    "//fusl/src/unistd/isatty.c",
    "//fusl/src/unistd/lchown.c",
    "//fusl/src/unistd/link.c",
    "//fusl/src/unistd/linkat.c",
    "//fusl/src/unistd/lseek.c",
    "//fusl/src/unistd/nice.c",
    "//fusl/src/unistd/pause.c",
    "//fusl/src/unistd/pipe.c",
    "//fusl/src/unistd/pipe2.c",
    "//fusl/src/unistd/posix_close.c",
    "//fusl/src/unistd/pread.c",
    "//fusl/src/unistd/preadv.c",
    "//fusl/src/unistd/pwrite.c",
    "//fusl/src/unistd/pwritev.c",
    "//fusl/src/unistd/read.c",
    "//fusl/src/unistd/readlink.c",
    "//fusl/src/unistd/readlinkat.c",
    "//fusl/src/unistd/readv.c",
    "//fusl/src/unistd/renameat.c",
    "//fusl/src/unistd/rmdir.c",
    "//fusl/src/unistd/setegid.c",
    "//fusl/src/unistd/seteuid.c",
    "//fusl/src/unistd/setgid.c",
    "//fusl/src/unistd/setpgid.c",
    "//fusl/src/unistd/setpgrp.c",
    "//fusl/src/unistd/setregid.c",
    "//fusl/src/unistd/setresgid.c",
    "//fusl/src/unistd/setresuid.c",
    "//fusl/src/unistd/setreuid.c",
    "//fusl/src/unistd/setsid.c",
    "//fusl/src/unistd/setuid.c",
    "//fusl/src/unistd/setxid.c",
    "//fusl/src/unistd/sleep.c",
    "//fusl/src/unistd/symlink.c",
    "//fusl/src/unistd/symlinkat.c",
    "//fusl/src/unistd/sync.c",
    "//fusl/src/unistd/tcgetpgrp.c",
    "//fusl/src/unistd/tcsetpgrp.c",
    "//fusl/src/unistd/truncate.c",
    "//fusl/src/unistd/ttyname.c",
    "//fusl/src/unistd/ttyname_r.c",
    "//fusl/src/unistd/ualarm.c",
    "//fusl/src/unistd/unlink.c",
    "//fusl/src/unistd/unlinkat.c",
    "//fusl/src/unistd/usleep.c",
    "//fusl/src/unistd/write.c",
    "//fusl/src/unistd/writev.c",
  ]

  # Arch specific sources.
  sources += [
    "//fusl/src/fenv/x86_64/fenv.s",
    "//fusl/src/internal/x86_64/syscall.s",
    "//fusl/src/ldso/x86_64/dlsym.s",
    "//fusl/src/ldso/x86_64/tlsdesc.s",
    "//fusl/src/math/x86_64/__invtrigl.s",
    "//fusl/src/math/x86_64/acosl.s",
    "//fusl/src/math/x86_64/asinl.s",
    "//fusl/src/math/x86_64/atan2l.s",
    "//fusl/src/math/x86_64/atanl.s",
    "//fusl/src/math/x86_64/ceill.s",
    "//fusl/src/math/x86_64/exp2l.s",
    "//fusl/src/math/x86_64/expl.s",
    "//fusl/src/math/x86_64/expm1l.s",
    "//fusl/src/math/x86_64/fabs.s",
    "//fusl/src/math/x86_64/fabsf.s",
    "//fusl/src/math/x86_64/fabsl.s",
    "//fusl/src/math/x86_64/floorl.s",
    "//fusl/src/math/x86_64/fmodl.s",
    "//fusl/src/math/x86_64/llrint.s",
    "//fusl/src/math/x86_64/llrintf.s",
    "//fusl/src/math/x86_64/llrintl.s",
    "//fusl/src/math/x86_64/log10l.s",
    "//fusl/src/math/x86_64/log1pl.s",
    "//fusl/src/math/x86_64/log2l.s",
    "//fusl/src/math/x86_64/logl.s",
    "//fusl/src/math/x86_64/lrint.s",
    "//fusl/src/math/x86_64/lrintf.s",
    "//fusl/src/math/x86_64/lrintl.s",
    "//fusl/src/math/x86_64/remainderl.s",
    "//fusl/src/math/x86_64/rintl.s",
    "//fusl/src/math/x86_64/sqrt.s",
    "//fusl/src/math/x86_64/sqrtf.s",
    "//fusl/src/math/x86_64/sqrtl.s",
    "//fusl/src/math/x86_64/truncl.s",
    "//fusl/src/process/x86_64/vfork.s",
    "//fusl/src/setjmp/x86_64/longjmp.s",
    "//fusl/src/setjmp/x86_64/setjmp.s",
    "//fusl/src/signal/x86_64/restore.s",
    "//fusl/src/signal/x86_64/sigsetjmp.s",
    "//fusl/src/string/x86_64/memcpy.s",
    "//fusl/src/string/x86_64/memmove.s",
    "//fusl/src/string/x86_64/memset.s",
    "//fusl/src/thread/x86_64/__set_thread_area.s",
    "//fusl/src/thread/x86_64/__unmapself.s",
    "//fusl/src/thread/x86_64/clone.s",
    "//fusl/src/thread/x86_64/syscall_cp.s",
  ]
}
